<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="txv_user">Carlos</string>
    <string name="txv_email">carloscruzdominguez@gmail.com</string>
    <string name="action_home">Inicio</string>
    <string name="action_dependency">Dependencias</string>
    <string name="action_sector">Sectores</string>
    <string name="navigation_subheader">Otras opciones</string>
    <string name="action_help">Ayuda</string>
    <string name="action_other_options">Otras opciones</string>
    <string name="hello_blank_fragment_one">Soy el fragment 1</string>
    <string name="hello_blank_fragment_two">Soy el fragment 2</string>
    <string name="txvDescription">Descripcion</string>
    <string name="btnChange">Cambiar estado</string>
    <string name="txvCreationDate">Fecha de creación</string>
    <string name="txvNombre">Nombre:</string>
    <string name="txvSerial">Serial:</string>
    <string name="txvVendedor">Vendedor:</string>
    <string name="txvModelo">Modelo:</string>
    <string name="txvCategoria">Categoria:</string>
    <string name="txvSubcategoria">Subcategoria:</string>
    <string name="txvTipo">Tipo:</string>
    <string name="txvDescripcion">Descripcion:</string>
    <string name="txvPrecio">Precio:</string>
    <string name="txvFechaCompra">F.Compra:</string>
    <string name="txvUrl">Url:</string>
    <string name="txvNotas">Notas:</string>
    <string name="action_save">Save</string>
    <string name="action_general_settings">Ajustes generales</string>
    <string name="action_account_settings">Ajustes de cuenta</string>
    <string name="edtName">Escriba el nombre</string>
    <string name="edtShortname">Escriba el nombre corto</string>
    <string name="edtDescription">Añada una descripcion</string>
    <string name="fragment_listdependency_delete">Eliminar dependencia</string>
    <string name="btnOk">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="ordenar_por_nombre">Ordenar por nombre</string>
    <string name="ordenar_por_id">Ordenar por id</string>
</resources>
